--- a/frontend/src/app/client-info/client-info.component.html
+++ b/frontend/src/app/client-info/client-info.component.html
@@ -75,38 +75,44 @@
 
 </div>
 <div *ngIf="loggedUser.role == 'Seller' || loggedUser.role == 'Auditor'">
-    <mat-dialog-content>
-        <div class="aud-sell-container">
-            <section class="sell-container">
-                <div class="pdv-info-container">
-                    <div class="pdv-img">
-                        <img src="{{data.NFCP}}" alt="">
-                    </div>
-                    <div class="pdv-info">
-                        <p><b>Sector:</b> {{data.Code_Secteur_OS}}</p>
-                        <p><b>Name:</b> {{data.NomPrenom}}</p>
-                        <p><b>Phone Number:</b> {{data.PhoneNumber}}</p>
-                        <p><b>Type PDV:</b> {{ data.TypeDPV}}, {{data.detailType}}</p>
-                    </div>
+    <mat-dialog-content class="dialog-content">
+        <h2>Client Information</h2>
+        <section fxLayout="column" fxLayoutAlign="center">
+            <div class="pdv-info-container">
+                <div class="pdv-img">
+                    <img src="{{data.properties.NFCP}}" alt="">
                 </div>
-                <div class="pdv-info-container">
-                    <div class="pdv-img">
-                        <img src="{{data.PVP}}" alt="">
-                    </div>
-                    <div class="pdv-info">
-                        <p><b>Code NFC:</b> {{data.nfc.codeNFC}}</p>
-                        <p><b>UUID:</b> {{data.nfc.UUID}}</p>
-                    
-                    </div>
+                <div class="pdv-info">
+                    <label>Sector:</label> 
+                    <p>{{data.properties.Code_Secteur_OS}}</p>
+                    <label>Name:</label> 
+                    <p>{{data.properties.NomPrenom}}</p>
+                    <label>Phone Number:</label> 
+                    <p>{{data.properties.PhoneNumber}}</p>
+                    <label>Type PDV:</label>
+                    <p>{{ data.properties.TypeDPV}}, {{data.properties.detailType}}</p>
                 </div>
+            </div>
+            <div class="pdv-info-container">
+                <div class="pdv-img">
+                    <img src="{{data.properties.PVP}}" alt="">
+                </div>
+                <div class="pdv-info">
+                    <label>Code NFC:</label>
+                    <p *ngIf="!data.properties.nfc.codeNFC, else nfc">Doesn't exist</p>
+                    <ng-template #nfc>{{data.properties.nfc.codeNFC}}</ng-template>
+                    <label>UUID:</label>
+                    <p>{{data.properties.nfc.UUID}}</p>
                 
-            </section>
-        </div>
+                </div>
+            </div>
+            
+        </section>
         <!-- <p> {{data.NomPrenom}}</p> -->
     </mat-dialog-content>
 
     <mat-dialog-actions class="action-btns" align="center">
-        <button mat-raised-button color="primary" class="btn-green" (click)="onUpdateClick()" mat-dialog-close>Update Client</button>
+        <button mat-raised-button color="primary" class="btn-green" (click)="onUpdateClick()" >Update Client</button>
         <button mat-raised-button color="primary" class="btn-red">Delete Client</button>
     </mat-dialog-actions>
 </div>
