change query db

--- a/frontend/src/app/client-info/client-info.component.html
+++ b/frontend/src/app/client-info/client-info.component.html
@@ -29,7 +29,7 @@
                     <span>Auditor</span>
                     <div class="pdv-info-container">
                         <div class="pdv-img">
-                            <img src="{{clientOfSeller.NFCP}}" alt="">
+                            <img src="{{clientOfAuditor.PVP}}" alt="">
                         </div>
                         <div class="pdv-info">
                             <label>Sector:</label> 
