--- a/frontend/src/app/addclient/addclient.component.html
+++ b/frontend/src/app/addclient/addclient.component.html
@@ -87,7 +87,7 @@
     <div class="container" id="nfc" *ngIf="nfcShown">
 
         <div class="inputs-container">
-            <div class="nfc">
+            <div class="nfc" *ngIf="loggedUser.role == 'Auditor'">
                 <div class="scan-field">
                     <label class="input-label">NFC card puce : </label>
                     <button mat-button class="btn-green" (click)="Read()">Read</button>
