--- a/frontend/src/app/sidebar-menu/sidebar-menu.component.html
+++ b/frontend/src/app/sidebar-menu/sidebar-menu.component.html
@@ -43,6 +43,15 @@
                     </div>
                 </mat-list-item>
             </div>
+            <div>
+            <mat-list-item routerLink="offline" routerLinkActive="active">
+                    <mat-icon mat-list-icon>refresh</mat-icon>
+                    <div fxFlex="10"></div>
+                    <div *ngIf="sidenavWidth> 6" class="sidenav-item">
+                        <span>Synchronisation</span>
+                    </div>
+                </mat-list-item>
+            </div>
             
         </mat-nav-list>
     </mat-sidenav>
