--- a/frontend/src/app/sidebar-menu/sidebar-menu.component.html
+++ b/frontend/src/app/sidebar-menu/sidebar-menu.component.html
@@ -44,12 +44,14 @@
                 </mat-list-item>
             </div>
             <div>
-            <mat-list-item routerLink="offline" routerLinkActive="active">
+             <mat-list-item routerLink="offline" routerLinkActive="active">
                     <mat-icon mat-list-icon>refresh</mat-icon>
                     <div fxFlex="10"></div>
                     <div *ngIf="sidenavWidth> 6" class="sidenav-item">
                         <span>Synchronisation</span>
+                </mat-list-item>
 
+            </div>
             <div>
                 <mat-list-item routerLink="settings" routerLinkActive="active">
                     <mat-icon mat-list-icon>settings</mat-icon>
