--- a/frontend/src/app/client-info/client-info.component.css
+++ b/frontend/src/app/client-info/client-info.component.css
@@ -69,6 +69,7 @@
     height: 150px;
     border-radius: 2px;
     box-shadow: rgba(0, 0, 0, 0.1) 0px 1px 2px 0px;
+    cursor: pointer;
 }
 .pdv-info p{
     margin: 2px;
