--- a/frontend/src/app/sidebar-menu/sidebar-menu.component.html
+++ b/frontend/src/app/sidebar-menu/sidebar-menu.component.html
@@ -52,7 +52,7 @@
                     </div>
             </mat-list-item>
             
-            <mat-list-item routerLink="settings" routerLinkActive="active">
+            <mat-list-item routerLink="settings" routerLinkActive="active" *ngIf="user.role== 'Admin'">
                 <mat-icon mat-list-icon>settings</mat-icon>
                 <div fxFlex="10"></div>
                 <div *ngIf="sidenavWidth> 6" class="sidenav-item">
